--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -23,50 +22,273 @@
   </style>
 </head>
 <body class="text-gray-900">
-  <!-- Mobile UI improvements added -->
+  <!-- sticky top bar -->
   <div class="sticky top-0 z-50 bg-gradient-to-r from-green-400 to-blue-500 text-white flex justify-between items-center p-3 shadow">
     <h1 class="text-lg font-bold">⚽ Nibcard FPL Dashboard</h1>
     <button id="shareBtn" class="bg-white text-green-600 font-semibold px-3 py-1 rounded">📤 Share</button>
   </div>
 
-  <!-- The body content has been simplified for demonstration. Additional scripts are assumed. -->
-  <div class="p-4">
-    <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
-      <h2 class="text-xl font-bold mb-2">💥 Most Points in GW</h2>
-      <canvas id="chartGW"></canvas>
-    </div>
-    <div class="bg-white rounded shadow p-4 mb-6 fade-in">
-      <h2 class="text-xl font-bold mb-2">📋 League Table</h2>
-      <table class="table-auto w-full text-left border-collapse" id="leagueTable">
-        <thead>
-          <tr class="bg-gray-200">
-            <th class="px-2 py-1">Rank</th>
-            <th class="px-2 py-1">Team</th>
-            <th class="px-2 py-1">GW</th>
-            <th class="px-2 py-1">Total</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-      <div id="accordionTable" class="space-y-2 mt-4 accordion-card"></div>
-    </div>
+  <!-- tabs -->
+  <div class="flex border-b mt-2">
+    <button id="tabOverview" class="flex-1 py-2 font-semibold bg-gray-100">Overview</button>
+    <button id="tabSpecials" class="flex-1 py-2">Wale's Specials</button>
   </div>
 
-  <script>
-    function renderAccordion(teams) {
-      const container = document.getElementById('accordionTable');
-      container.innerHTML = teams.map((t,i)=>\`
-        <div class="p-3 bg-gray-100 rounded shadow">
-          <div class="font-bold text-lg">\${t.entry_name}</div>
-          <div class="text-sm text-gray-600">\${t.player_name}</div>
-          <div class="flex justify-between mt-1">
-            <span><strong>GW:</strong> \${t.event_total}</span>
-            <span><strong>Total:</strong> \${t.total}</span>
-            <span><strong>Rank:</strong> \${i+1}</span>
-          </div>
-        </div>
-      \`).join('');
+  <!-- overview -->
+  <div id="overview" class="p-4">
+    <div id="shareArea">
+      <!-- Hero Chart -->
+      <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
+        <h2 class="text-xl font-bold mb-2">💥 Most Points in GW</h2>
+        <canvas id="chartGW"></canvas>
+      </div>
+
+      <!-- League Leader -->
+      <div class="bg-white rounded shadow p-4 mb-6 fade-in">
+        <h2 class="text-xl font-bold mb-2">🏆 League Leader</h2>
+        <p id="leaderCard"></p>
+      </div>
+
+      <!-- League Table -->
+      <div class="bg-white rounded shadow p-4 fade-in">
+        <h2 class="text-xl font-bold mb-2">📋 League Table</h2>
+        <table class="table-auto w-full text-left border-collapse" id="leagueTable">
+          <thead>
+            <tr class="bg-gray-200">
+              <th class="px-2 py-1">Rank</th>
+              <th class="px-2 py-1">Team</th>
+              <th class="px-2 py-1">GW</th>
+              <th class="px-2 py-1">Total</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+        <!-- mobile accordion -->
+        <div id="accordionTable" class="space-y-2 mt-4 accordion-card"></div>
+      </div>
+    </div>
+    <p id="lastUpdated" class="text-sm text-gray-500 mt-4 italic"></p>
+  </div>
+
+  <!-- specials -->
+  <div id="specials" class="p-4 hidden">
+    <!-- Pie chart -->
+    <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
+      <h2 class="text-xl font-bold mb-2">🥇 Most GWs at No.1</h2>
+      <canvas id="chartNo1"></canvas>
+    </div>
+
+    <!-- Worst GW -->
+    <div class="bg-white rounded shadow p-4 mb-6 fade-in">
+      <h2 class="text-xl font-bold mb-2">😴 Worst GW</h2>
+      <p id="worstGWCard"></p>
+    </div>
+
+    <!-- Leaders -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6 fade-in">
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🏆 Classic Leader</h2>
+        <p id="classicLeader"></p>
+      </div>
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🥇 H2H Leader</h2>
+        <p id="h2hLeader"></p>
+      </div>
+    </div>
+
+    <!-- Captains -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 fade-in">
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🧑‍✈️ Most Popular Captain</h2>
+        <p id="popularCaptain"></p>
+      </div>
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">👤 Least Popular Captain</h2>
+        <p id="leastCaptain"></p>
+      </div>
+    </div>
+    <p id="lastUpdatedSpecials" class="text-sm text-gray-500 mt-4 italic"></p>
+  </div>
+
+<script>
+const classicApi = (leagueId=543395, page=1) => 
+  `/.netlify/functions/standings?leagueId=${leagueId}&page=${page}`;
+const h2hApi = (leagueId=1997131, page=1) =>
+  `/.netlify/functions/h2h?leagueId=${leagueId}&page=${page}`;
+const captainsApi = (gw=1, leagueId=543395) =>
+  `/.netlify/functions/captains?gw=${gw}&leagueId=${leagueId}`;
+
+let teamColors = {};
+function getColor(teamName, idx) {
+  if (teamColors[teamName]) return teamColors[teamName];
+  const palette = ['#60a5fa','#34d399','#f87171','#fbbf24','#a78bfa','#f472b6','#22d3ee','#10b981','#6366f1'];
+  teamColors[teamName] = palette[idx % palette.length];
+  return teamColors[teamName];
+}
+
+// tabs
+document.getElementById('tabOverview').onclick = () => {
+  document.getElementById('overview').classList.remove('hidden');
+  document.getElementById('specials').classList.add('hidden');
+  document.getElementById('tabOverview').classList.add('bg-gray-100');
+  document.getElementById('tabSpecials').classList.remove('bg-gray-100');
+};
+document.getElementById('tabSpecials').onclick = () => {
+  document.getElementById('overview').classList.add('hidden');
+  document.getElementById('specials').classList.remove('hidden');
+  document.getElementById('tabSpecials').classList.add('bg-gray-100');
+  document.getElementById('tabOverview').classList.remove('bg-gray-100');
+};
+
+// share
+document.getElementById('shareBtn').addEventListener('click', () => {
+  html2canvas(document.getElementById('shareArea')).then(canvas => {
+    const link = document.createElement('a');
+    link.download = 'fpl-share.png';
+    link.href = canvas.toDataURL();
+    link.click();
+  });
+});
+
+async function loadLeague() {
+  const res = await fetch(classicApi());
+  const data = await res.json();
+  return data.standings.results;
+}
+
+async function loadH2H() {
+  const res = await fetch(h2hApi());
+  return res.json();
+}
+
+async function loadCaptains() {
+  const res = await fetch(captainsApi());
+  return res.json();
+}
+
+function renderOverview(teams) {
+  const leader = teams[0];
+  document.getElementById('leaderCard').innerHTML =
+    `<strong>${leader.entry_name}</strong> (${leader.player_name}) – ${leader.total} pts`;
+
+  const tbody = document.querySelector('#leagueTable tbody');
+  tbody.innerHTML = teams.map((t,i)=>`
+    <tr class="${i%2?'bg-gray-50':''}">
+      <td class="px-2 py-1">${i+1}</td>
+      <td class="px-2 py-1">${t.entry_name}</td>
+      <td class="px-2 py-1">${t.event_total}</td>
+      <td class="px-2 py-1">${t.total}</td>
+    </tr>
+  `).join('');
+
+  renderAccordion(teams);
+
+  new Chart(document.getElementById('chartGW').getContext('2d'), {
+    type: 'bar',
+    data: {
+      labels: teams.map(t=>t.entry_name),
+      datasets: [{
+        label: 'GW Points',
+        data: teams.map(t=>t.event_total),
+        backgroundColor: teams.map((t,i)=> getColor(t.entry_name, i))
+      }]
+    },
+    options: { animation:{duration:1000}, responsive:true }
+  });
+}
+
+function renderAccordion(teams) {
+  const container = document.getElementById('accordionTable');
+  container.innerHTML = teams.map((t,i)=>`
+    <div class="p-3 bg-gray-100 rounded shadow">
+      <div class="font-bold text-lg">${t.entry_name}</div>
+      <div class="text-sm text-gray-600">${t.player_name}</div>
+      <div class="flex justify-between mt-1">
+        <span><strong>GW:</strong> ${t.event_total}</span>
+        <span><strong>Total:</strong> ${t.total}</span>
+        <span><strong>Rank:</strong> ${i+1}</span>
+      </div>
+    </div>
+  `).join('');
+}
+
+async function renderSpecials(teams, h2h, caps) {
+  const worst = teams.reduce((a,b)=> a.event_total < b.event_total ? a : b);
+  document.getElementById('worstGWCard').innerHTML =
+    `<strong>${worst.entry_name}</strong> – ${worst.event_total} pts`;
+
+  document.getElementById('classicLeader').textContent = teams[0].entry_name;
+  document.getElementById('h2hLeader').textContent = h2h.teamName;
+
+  document.getElementById('popularCaptain').textContent = caps.popular || 'N/A';
+  document.getElementById('leastCaptain').textContent = caps.least || 'N/A';
+
+  let leaderCountsByGW = {};
+  for (let team of teams) {
+    const res = await fetch(`/.netlify/functions/entryHistory?teamId=${team.entry}`);
+    const history = await res.json();
+
+    history.forEach(h => {
+      if (!leaderCountsByGW[h.gw]) leaderCountsByGW[h.gw] = [];
+      leaderCountsByGW[h.gw].push({ team: team.entry_name, total: h.total_points });
+    });
+  }
+
+  let leaderTally = {};
+  let leaderGWs = {};
+  Object.entries(leaderCountsByGW).forEach(([gw, entries]) => {
+    const leader = entries.reduce((a,b)=> a.total > b.total ? a : b);
+    leaderTally[leader.team] = (leaderTally[leader.team]||0)+1;
+    if (!leaderGWs[leader.team]) leaderGWs[leader.team] = [];
+    leaderGWs[leader.team].push(gw);
+  });
+
+  const labels = Object.keys(leaderTally);
+  const values = Object.values(leaderTally);
+
+  new Chart(document.getElementById('chartNo1').getContext('2d'), {
+    type: 'pie',
+    data: {
+      labels,
+      datasets: [{
+        data: values,
+        backgroundColor: labels.map((team,i)=> getColor(team,i))
+      }]
+    },
+    options: {
+      plugins: {
+        tooltip: {
+          callbacks: {
+            label: (context) => {
+              const team = context.label;
+              const weeks = leaderGWs[team] || [];
+              return `${team}: ${values[context.dataIndex]} GWs (GW ${weeks.join(', ')})`;
+            }
+          }
+        }
+      }
     }
-  </script>
+  });
+}
+
+async function init() {
+  try {
+    const teams = await loadLeague();
+    renderOverview(teams);
+
+    const h2h = await loadH2H();
+    const caps = await loadCaptains();
+    renderSpecials(teams,h2h,caps);
+
+    const now = new Date();
+    const stamp = `Last updated: ${now.toLocaleString()}`;
+    document.getElementById('lastUpdated').textContent = stamp;
+    document.getElementById('lastUpdatedSpecials').textContent = stamp;
+  } catch(err) {
+    document.body.innerHTML = `<p class="text-red-600">Error: ${err}</p>`;
+  }
+}
+init();
+</script>
 </body>
 </html>
