--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
   <!-- sticky top bar -->
   <div class="sticky top-0 z-50 bg-gradient-to-r from-green-400 to-blue-500 text-white flex justify-between items-center p-3 shadow">
     <h1 class="text-lg font-bold">⚽ Nibcard FPL Dashboard</h1>
-    <button id="shareBtn" class="bg-white text-green-600 font-semibold px-3 py-1 rounded">📤 Share</button>
+    <div class="flex items-center space-x-4">
+      <div class="flex items-center space-x-2">
+        <label for="gwSelect" class="text-sm">GW:</label>
+        <select id="gwSelect" class="text-black rounded px-2 py-1"></select>
+      </div>
+      <button id="shareBtn" class="bg-white text-green-600 font-semibold px-3 py-1 rounded">📤 Share</button>
+    </div>
   </div>
 
   <!-- tabs -->
   <div class="flex border-b mt-2">
     <button id="tabOverview" class="flex-1 py-2 font-semibold bg-gray-100">Overview</button>
     <button id="tabSpecials" class="flex-1 py-2">Wale's Specials</button>
+    <button id="tabSettings" class="flex-1 py-2">⚙️ Settings</button>
   </div>
 
   <!-- overview -->
@@ -39,14 +46,24 @@
     <div id="shareArea">
       <!-- Hero Chart -->
       <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
-        <h2 class="text-xl font-bold mb-2">💥 Most Points in GW</h2>
+        <h2 class="text-xl font-bold mb-2">💥 Most Points in GW <span id="gwLabel"></span></h2>
         <canvas id="chartGW"></canvas>
       </div>
 
-      <!-- League Leader -->
-      <div class="bg-white rounded shadow p-4 mb-6 fade-in">
-        <h2 class="text-xl font-bold mb-2">🏆 League Leader</h2>
-        <p id="leaderCard"></p>
+      <!-- Summary Cards -->
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6 fade-in">
+        <div class="bg-white rounded shadow p-4">
+          <h2 class="text-lg font-bold mb-2">🏆 Classic Leader</h2>
+          <p id="leaderCard"></p>
+        </div>
+        <div class="bg-white rounded shadow p-4">
+          <h2 class="text-lg font-bold mb-2">🥇 H2H Leader</h2>
+          <p id="h2hLeaderCard"></p>
+        </div>
+        <div class="bg-white rounded shadow p-4">
+          <h2 class="text-lg font-bold mb-2">💥 Best GW Performer</h2>
+          <p id="bestGWCard"></p>
+        </div>
       </div>
 
       <!-- League Table -->
@@ -72,6 +89,147 @@
 
   <!-- specials -->
   <div id="specials" class="p-4 hidden">
+    <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
+      <h2 class="text-xl font-bold mb-2">🥇 Most GWs at No.1</h2>
+      <canvas id="chartNo1"></canvas>
+    </div>
+    <div class="bg-white rounded shadow p-4 mb-6 fade-in">
+      <h2 class="text-xl font-bold mb-2">😴 Worst GW</h2>
+      <p id="worstGWCard"></p>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6 fade-in">
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🏆 Classic Leader</h2>
+        <p id="classicLeader"></p>
+      </div>
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🥇 H2H Leader</h2>
+        <p id="h2hLeader"></p>
+      </div>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 fade-in">
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">🧑‍✈️ Most Popular Captain</h2>
+        <p id="popularCaptain"></p>
+      </div>
+      <div class="bg-white rounded shadow p-4">
+        <h2 class="text-lg font-bold mb-2">👤 Least Popular Captain</h2>
+        <p id="leastCaptain"></p>
+      </div>
+    </div>
+    <p id="lastUpdatedSpecials" class="text-sm text-gray-500 mt-4 italic"></p>
+  </div>
+
+  <!-- settings -->
+  <div id="settings" class="p-4 hidden">
+    <div class="bg-white rounded shadow p-4 fade-in">
+      <h2 class="text-xl font-bold mb-4">⚙️ Dashboard Settings</h2>
+      <label class="block mb-2">Classic League ID</label>
+      <input id="classicInput" type="number" class="border rounded w-full p-2 mb-4" placeholder="e.g. 543395">
+      <label class="block mb-2">H2H League ID</label>
+      <input id="h2hInput" type="number" class="border rounded w-full p-2 mb-4" placeholder="e.g. 1997131">
+      <button id="updateBtn" class="bg-green-600 text-white font-semibold px-4 py-2 rounded">Update Dashboard</button>
+      <p id="settingsMsg" class="text-sm text-gray-600 mt-2"></p>
+    </div>
+  </div>
+
+<script>
+let classicLeagueId = localStorage.getItem("classicLeagueId") || 543395;
+let h2hLeagueId = localStorage.getItem("h2hLeagueId") || 1997131;
+let currentGW = localStorage.getItem("currentGW");
+
+async function getLatestGW() {
+  const res = await fetch("https://fantasy.premierleague.com/api/bootstrap-static/");
+  const data = await res.json();
+  const latest = data.events.find(e => e.finished === true && e.data_checked === true);
+  return latest ? latest.id : 1;
+}
+
+const classicApi = (leagueId=classicLeagueId, page=1) => 
+  `/.netlify/functions/standings?leagueId=${leagueId}&page=${page}`;
+const h2hApi = (leagueId=h2hLeagueId, page=1) =>
+  `/.netlify/functions/h2h?leagueId=${leagueId}&page=${page}`;
+const captainsApi = (gw=currentGW, leagueId=classicLeagueId) =>
+  `/.netlify/functions/captains?gw=${gw}&leagueId=${leagueId}`;
+
+let teamColors = {};
+function getColor(teamName, idx) {
+  if (teamColors[teamName]) return teamColors[teamName];
+  const palette = ['#60a5fa','#34d399','#f87171','#fbbf24','#a78bfa','#f472b6','#22d3ee','#10b981','#6366f1'];
+  teamColors[teamName] = palette[idx % palette.length];
+  return teamColors[teamName];
+}
+
+// populate GW dropdown
+function populateGWDropdown() {
+  const gwSelect = document.getElementById("gwSelect");
+  gwSelect.innerHTML = "";
+  for (let i = 1; i <= 38; i++) {
+    let opt = document.createElement("option");
+    opt.value = i;
+    opt.textContent = `GW ${i}`;
+    if (i == parseInt(currentGW)) opt.selected = true;
+    gwSelect.appendChild(opt);
+  }
+  gwSelect.addEventListener("change", (e) => {
+    currentGW = e.target.value;
+    localStorage.setItem("currentGW", currentGW);
+    init();
+  });
+}
+
+// share high res
+document.getElementById('shareBtn').addEventListener('click', () => {
+  html2canvas(document.getElementById('shareArea'), { scale: 2 }).then(canvas => {
+    const link = document.createElement('a');
+    link.download = 'fpl-share.png';
+    link.href = canvas.toDataURL("image/png", 1.0);
+    link.click();
+  });
+});
+
+// tabs + settings (same as before)...
+
+async function loadLeague() {
+  const res = await fetch(classicApi());
+  const data = await res.json();
+  return data.standings.results;
+}
+async function loadH2H() {
+  const res = await fetch(h2hApi());
+  return res.json();
+}
+async function loadCaptains() {
+  const res = await fetch(captainsApi(currentGW));
+  return res.json();
+}
+
+async function init() {
+  try {
+    if (!currentGW) {
+      currentGW = await getLatestGW();
+      localStorage.setItem("currentGW", currentGW);
+    }
+    populateGWDropdown();
+
+    const teams = await loadLeague();
+    renderOverview(teams);
+
+    const h2h = await loadH2H();
+    const caps = await loadCaptains();
+    renderSpecials(teams,h2h,caps);
+
+    const stamp = "Last updated: " + new Date().toLocaleString();
+    document.getElementById('lastUpdated').textContent = stamp;
+    document.getElementById('lastUpdatedSpecials').textContent = stamp;
+  } catch(err) {
+    document.body.innerHTML = `<p class="text-red-600">Error: ${err}</p>`;
+  }
+}
+init();
+</script>
+</body>
+</html>
     <!-- Pie chart -->
     <div class="overflow-x-auto bg-white rounded shadow p-4 mb-6 fade-in">
       <h2 class="text-xl font-bold mb-2">🥇 Most GWs at No.1</h2>
