--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Captains Test</title>
+  <title>Entry History Test</title>
 </head>
 <body>
-  <h1>Most Popular Captain</h1>
+  <h1>Entry History (Team ID 4887748)</h1>
   <pre id="out">Loading...</pre>
 
   <script>
-    async function testCaptains() {
+    async function testEntryHistory() {
       try {
-        const res = await fetch('/.netlify/functions/captains?leagueId=543395');
+        const res = await fetch('/.netlify/functions/entryHistory?teamId=4887748');
         console.log("Response status:", res.status);
         const data = await res.json();
-        console.log("Captains result:", data);
+        console.log("Entry history result:", data);
         document.getElementById("out").textContent = JSON.stringify(data, null, 2);
       } catch (err) {
-        console.error("Captains fetch failed:", err);
+        console.error("Entry history fetch failed:", err);
         document.getElementById("out").textContent = "Error: " + err.message;
       }
     }
-    testCaptains();
+    testEntryHistory();
   </script>
 </body>
 </html>
