--- a/index.html
+++ b/index.html
@@ -3,71 +3,167 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FPL Dashboard - Raw Data</title>
+  <title>Nibcard FPL Dashboard</title>
+
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- html2canvas -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
   <style>
     body {
-      font-family: sans-serif;
-      padding: 2rem;
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
+      background-attachment: fixed;
+      color: #222;
     }
-    .section {
-      margin-bottom: 2rem;
+    header {
+      position: sticky; top: 0;
+      background: rgba(0,0,0,0.7);
+      color: #fff; padding: 1rem;
+      display: flex; justify-content: space-between; align-items: center;
+      z-index: 100;
     }
-    pre {
-      background: #f0f0f0;
-      padding: 1rem;
-      border-radius: 6px;
-      overflow: auto;
+    header h1 { margin: 0; font-size: 1.2rem; }
+    .btn {
+      background: #fff; border: none; padding: .5rem 1rem;
+      border-radius: 5px; cursor: pointer;
     }
+    .dark-mode {
+      background: #1e1e1e; color: #ddd;
+    }
+    .dashboard { padding: 1rem; }
+    .cards { display: flex; flex-wrap: wrap; gap: 1rem; }
+    .card {
+      flex: 1; min-width: 200px;
+      background: #fff; border-radius: 12px; padding: 1rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform .2s;
+    }
+    .card:hover { transform: translateY(-3px); }
+    canvas { background: #fff; border-radius: 12px; padding: 1rem; margin: 1rem 0; }
+    pre { background: rgba(0,0,0,0.1); padding: 1rem; border-radius: 8px; }
   </style>
 </head>
 <body>
-  <h1>FPL Dashboard (Raw Data Mode)</h1>
+  <header>
+    <h1>Nibcard FPL Dashboard 🎲</h1>
+    <div>
+      <button class="btn" onclick="toggleDark()">🌙 Toggle Dark</button>
+      <button class="btn" onclick="shareDashboard()">📸 Share</button>
+    </div>
+  </header>
 
-  <div class="section" id="standings">
-    <h2>Classic League Standings</h2>
-    <pre id="standingsOut">Loading...</pre>
+  <div class="dashboard" id="dashboard">
+    <!-- KPI Cards -->
+    <div class="cards">
+      <div class="card" id="leagueLeader">League Leader: loading...</div>
+      <div class="card" id="h2hLeader">H2H Leader: loading...</div>
+      <div class="card" id="captainPick">Most Popular Captain: loading...</div>
+    </div>
+
+    <!-- Charts -->
+    <h2>Charts</h2>
+    <canvas id="mostPointsChart"></canvas>
+    <canvas id="gwProgressChart"></canvas>
+    <canvas id="mostWeeksChart"></canvas>
+
+    <!-- JSON Fallback -->
+    <h2>Raw Data (Debug)</h2>
+    <h3>Standings</h3><pre id="standingsOut">Loading...</pre>
+    <h3>H2H</h3><pre id="h2hOut">Loading...</pre>
+    <h3>Captains</h3><pre id="captainsOut">Loading...</pre>
   </div>
 
-  <div class="section" id="h2h">
-    <h2>H2H League Leader</h2>
-    <pre id="h2hOut">Loading...</pre>
-  </div>
+<script>
+async function loadDashboard() {
+  try {
+    // fetch standings
+    const standingsRes = await fetch('/.netlify/functions/standings?leagueId=543395');
+    const standings = await standingsRes.json();
+    document.getElementById("standingsOut").textContent = JSON.stringify(standings, null, 2);
 
-  <div class="section" id="captains">
-    <h2>Most Popular Captain</h2>
-    <pre id="captainsOut">Loading...</pre>
-  </div>
+    // fetch h2h
+    const h2hRes = await fetch('/.netlify/functions/h2h?leagueId=1997131');
+    const h2h = await h2hRes.json();
+    document.getElementById("h2hOut").textContent = JSON.stringify(h2h, null, 2);
 
-  <script>
-    async function loadDashboard() {
-      try {
-        // Classic standings
-        const standingsRes = await fetch('/.netlify/functions/standings?leagueId=543395');
-        const standings = await standingsRes.json();
-        console.log("Standings:", standings);
-        document.getElementById("standingsOut").textContent = JSON.stringify(standings, null, 2);
+    // fetch captains
+    const captainsRes = await fetch('/.netlify/functions/captains?leagueId=543395');
+    const captains = await captainsRes.json();
+    document.getElementById("captainsOut").textContent = JSON.stringify(captains, null, 2);
 
-        // H2H leader
-        const h2hRes = await fetch('/.netlify/functions/h2h?leagueId=1997131');
-        const h2h = await h2hRes.json();
-        console.log("H2H:", h2h);
-        document.getElementById("h2hOut").textContent = JSON.stringify(h2h, null, 2);
+    // KPI Cards
+    const leader = standings.standings[0];
+    document.getElementById("leagueLeader").textContent = `League Leader: ${leader.entry_name} (${leader.player_name}) - ${leader.total} pts`;
 
-        // Captains
-        const captainsRes = await fetch('/.netlify/functions/captains?leagueId=543395');
-        const captains = await captainsRes.json();
-        console.log("Captains:", captains);
-        document.getElementById("captainsOut").textContent = JSON.stringify(captains, null, 2);
+    const h2hLeader = h2h.standings[0];
+    document.getElementById("h2hLeader").textContent = `H2H Leader: ${h2hLeader.entry_name} (${h2hLeader.player_name}) - ${h2hLeader.total} pts`;
 
-      } catch (err) {
-        console.error("Dashboard fetch failed:", err);
-        document.querySelectorAll("pre").forEach(pre => {
-          pre.textContent = "Error loading data. Check console.";
-        });
+    document.getElementById("captainPick").textContent = `Most Popular Captain: ${captains.mostPopular.name} (${captains.mostPopular.count} picks)`;
+
+    // Chart: Most Points in GW
+    new Chart(document.getElementById('mostPointsChart'), {
+      type: 'bar',
+      data: {
+        labels: standings.standings.slice(0,5).map(t => t.entry_name),
+        datasets: [{
+          label: 'Total Points',
+          data: standings.standings.slice(0,5).map(t => t.total),
+          backgroundColor: '#4e79a7'
+        }]
+      },
+      options: { responsive: true, plugins: { legend: { display: false } } }
+    });
+
+    // Chart: GW Progress
+    new Chart(document.getElementById('gwProgressChart'), {
+      type: 'line',
+      data: {
+        labels: standings.standings[0].history.map(h => `GW${h.event}`),
+        datasets: standings.standings.slice(0,3).map(team => ({
+          label: team.entry_name,
+          data: team.history.map(h => h.points),
+          borderWidth: 2
+        }))
       }
-    }
+    });
 
-    loadDashboard();
-  </script>
+    // Chart: Most Weeks at No.1
+    new Chart(document.getElementById('mostWeeksChart'), {
+      type: 'pie',
+      data: {
+        labels: standings.specials.mostWeeks.map(t => t.entry_name),
+        datasets: [{
+          data: standings.specials.mostWeeks.map(t => t.weeks),
+          backgroundColor: ['#f28e2c','#76b7b2','#59a14f','#edc949','#e15759']
+        }]
+      }
+    });
+
+  } catch (err) {
+    console.error("Dashboard fetch failed:", err);
+  }
+}
+
+// dark mode toggle
+function toggleDark() {
+  document.body.classList.toggle("dark-mode");
+}
+
+// share dashboard
+function shareDashboard() {
+  const node = document.getElementById("dashboard");
+  html2canvas(node).then(canvas => {
+    const link = document.createElement("a");
+    link.download = "dashboard.png";
+    link.href = canvas.toDataURL();
+    link.click();
+  });
+}
+
+loadDashboard();
+</script>
 </body>
 </html>
