--- a/index.html
+++ b/index.html
@@ -99,6 +99,102 @@
       const captains = await captainsRes.json();
       document.getElementById("captainsOut").textContent = JSON.stringify(captains, null, 2);
 
+      // === 2. KPI CARDS (FIXED JSON path) ===
+      const leader = standings.standings.results[0];
+      document.getElementById("leagueLeader").textContent =
+        `League Leader: ${leader.entry_name} (${leader.player_name}) - ${leader.total} pts`;
+
+      const h2hLeader = h2h.standings.results[0];
+      document.getElementById("h2hLeader").textContent =
+        `H2H Leader: ${h2hLeader.entry_name} (${h2hLeader.player_name}) - ${h2hLeader.total} pts`;
+
+      const captainPick = captains.mostPopular || { name: "N/A", count: 0 };
+      document.getElementById("captainPick").textContent =
+        `Most Popular Captain: ${captainPick.name} (${captainPick.count} picks)`;
+
+      // === 3. BAR CHART: Top 5 Total Points ===
+      new Chart(document.getElementById('mostPointsChart'), {
+        type: 'bar',
+        data: {
+          labels: standings.standings.results.slice(0,5).map(t => t.entry_name),
+          datasets: [{
+            label: 'Total Points',
+            data: standings.standings.results.slice(0,5).map(t => t.total),
+            backgroundColor: '#4e79a7'
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { display: false } }
+        }
+      });
+
+      // === 4. LINE CHART: GW Progress for League Leader ===
+      const topTeamId = leader.entry;
+      const histRes = await fetch(`/.netlify/functions/entryHistory?teamId=${topTeamId}`);
+      const history = await histRes.json();
+
+      new Chart(document.getElementById('gwProgressChart'), {
+        type: 'line',
+        data: {
+          labels: history.current.map(h => `GW${h.event}`),
+          datasets: [{
+            label: leader.entry_name,
+            data: history.current.map(h => h.total_points),
+            borderColor: '#f28e2c',
+            fill: false,
+            tension: 0.2
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            title: {
+              display: true,
+              text: `GW Progress: ${leader.entry_name}`
+            }
+          }
+        }
+      });
+
+    } catch (err) {
+      console.error("Dashboard fetch failed:", err);
+      document.getElementById("leagueLeader").textContent = "Error loading dashboard ❌";
+    }
+  }
+
+  // Run when page loads
+  loadDashboard();
+  </script>
+</body>
+</html>
+
+    <!-- Debug Raw JSON -->
+    <h3>Raw Data (Debug)</h3>
+    <h4>Standings</h4>
+    <pre id="standingsOut">Loading...</pre>
+    <h4>H2H</h4>
+    <pre id="h2hOut">Loading...</pre>
+    <h4>Captains</h4>
+    <pre id="captainsOut">Loading...</pre>
+  </div>
+
+  <script>
+  async function loadDashboard() {
+    try {
+      // === 1. FETCH DATA ===
+      const standingsRes = await fetch('/.netlify/functions/standings?leagueId=543395');
+      const standings = await standingsRes.json();
+      document.getElementById("standingsOut").textContent = JSON.stringify(standings, null, 2);
+
+      const h2hRes = await fetch('/.netlify/functions/h2h?leagueId=1997131');
+      const h2h = await h2hRes.json();
+      document.getElementById("h2hOut").textContent = JSON.stringify(h2h, null, 2);
+
+      const captainsRes = await fetch('/.netlify/functions/captains?leagueId=543395');
+      const captains = await captainsRes.json();
+      document.getElementById("captainsOut").textContent = JSON.stringify(captains, null, 2);
+
       // === 2. KPI CARDS ===
       const leader = standings.standings.results[0];
       document.getElementById("leagueLeader").textContent =
